<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dimmer Control"/>
    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
           <RadioButton 
               android:id="@+id/dimbutton1"
               android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dimbutton1"
               />
           <RadioButton 
               android:id="@+id/dimbutton2"
               android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimbutton2"
               />
           <RadioButton 
               android:id="@+id/dimbutton3"
               android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimbutton3"
               />
           <RadioButton 
               android:id="@+id/dimbutton4"
               android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimbutton4"
               />
           <RadioButton 
               android:id="@+id/dimbutton5"
               android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimbutton5"
               />
       </RadioGroup>
</LinearLayout>