<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:paddingRight="2dp"
    	> 
    	<TextView
    	    android:id="@+id/one_day_title"
    	   	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/forecast"
	    	android:text="@string/forecast_one_title"
	    	>
    	</TextView>
		 <ImageView 
	    	android:id="@+id/one_day_forecast"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:padding="3dp"
	    	android:src="@drawable/day_113">
	    </ImageView>
	    <TextView
	        android:id="@+id/day_one_temp"
    	   	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/forecast"
	    	android:text="@string/forecast_one_temp" 
	    	android:textSize="20dp" 
	    	>
    	</TextView>
	</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:paddingRight="2dp"
    	> 
		<TextView
		    android:id="@+id/two_day_title"
    	   	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/forecast"
	    	android:text="@string/forecast_two_title" 
	    	>
    	</TextView>
   	    <ImageView 
	    	android:id="@+id/two_day_forecast"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:padding="3dp"
	    	android:src="@drawable/day_113">
	    </ImageView>
	    <TextView
	        android:id="@+id/day_two_temp"
    	   	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/forecast"
	    	android:text="@string/forecast_two_temp"
	    	android:textSize="20dp"  
	    	>
    	</TextView>
	</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
    	> 
   	    <TextView
   	        android:id="@+id/three_day_title"
    	   	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/forecast"
	    	android:text="@string/forecast_three_title" 
	    	>
    	</TextView>
	    <ImageView 
	    	android:id="@+id/three_day_forecast"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:padding="3dp"
	    	android:src="@drawable/day_113">
	    </ImageView>
	    <TextView
	        android:id="@+id/day_three_temp"
    	   	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/forecast"
	    	android:text="@string/forecast_three_temp" 
	    	android:textSize="20dp" 
	    	>
    	</TextView>
    </LinearLayout>
</LinearLayout>