<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/hour_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/hour_title"
            android:textColor="@color/forecast"
            android:textSize="20dp"/>
	    <FrameLayout 
	        android:id="@+id/hour"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" >
		    <ImageView 
		    	android:id="@+id/hour_background"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content" 
		    	android:src="@drawable/zeroam">
		    </ImageView>
		    <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal"
	    	android:gravity="center"
	    	android:background="@drawable/number_plate_sm">
		        	
			    <ImageView 
			    	android:id="@+id/high_hour"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:src="@drawable/zeroam">
			    </ImageView>
			    <ImageView 
			    	android:id="@+id/low_hour"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:src="@drawable/zeroam">
			    </ImageView>
			</LinearLayout>
		</FrameLayout>
    </LinearLayout>
     <View
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/minute_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/minute_title"
            android:textColor="@color/forecast"
            android:textSize="20dp"/>
   
    
    <FrameLayout 
        android:id="@+id/minute"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
	    <ImageView 
	    	android:id="@+id/minute_background"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:src="@drawable/zeroam">
	    </ImageView>
	    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:background="@drawable/number_plate_sm">
	        	
		    <ImageView 
		    	android:id="@+id/high_minute"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content" 
		    	android:src="@drawable/zeroam">
		    </ImageView>
		    <ImageView 
		    	android:id="@+id/low_minute"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content" 
		    	android:src="@drawable/zeroam">
		    </ImageView>
		</LinearLayout>
    </FrameLayout>
     </LinearLayout>
    <View
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/second_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/second_title"
            android:textColor="@color/forecast"
            android:textSize="20dp"/>
    <FrameLayout 
        android:id="@+id/second"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center" >
	    <ImageView 
	    	android:id="@+id/second_background"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:src="@drawable/zeroam">
	    </ImageView>
	    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:background="@drawable/number_plate_sm">
	        	
		    <ImageView 
		    	android:id="@+id/high_second"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content" 
		    	android:src="@drawable/zeroam">
		    </ImageView>
		    <ImageView 
		    	android:id="@+id/low_second"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content" 
		    	android:src="@drawable/zeroam">
		    </ImageView>
		</LinearLayout>
    </FrameLayout>
    </LinearLayout>    
</LinearLayout>